Fix the winners list cannot fit into the screen

--- a/styles.css
+++ b/styles.css
@@ -69,7 +69,7 @@ main {
 }
 #list-card.expand-more {
   margin-top: 12px;
-  max-height: 20em; /* unset; */
+  max-height: 233em;  /* unset; */
   padding: 1em;
 }
 #winner-list {
@@ -81,7 +81,7 @@ main {
   background: #cfcfcf;
   padding: 0.25em;
   overflow: hidden;
-  font-size: 1.5em;
+  font-size: 1.3em;
 }
 .winner-list-item.odd {
   background: #c0c0c0;
